--- a/templates/add.html
+++ b/templates/add.html
@@ -1,69 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Clean Blog - Start Bootstrap Theme</title>
+  <title>Mateusz Buziak</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="{{ url_for('static', filename='bootstrap.min.css') }}" rel="stylesheet">
+  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='style/main.css') }}">
 
-    <!-- Custom fonts for this template -->
-    <link href="{{ url_for('static', filename='font-awesome.min.css') }}" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+</head>
 
-    <!-- Custom styles for this template -->
-    <link href="{{ url_for('static', filename='clean-blog.min.css') }}" rel="stylesheet">
+<body>
 
-  </head>
+<!-- HEADER -->
+  <header>
+    <ul>
+      <li class="left">
+        <a class="home" href=" {{ url_for('index') }} ">Home</a>
+      </li>
+      <li class="left">
+        <a class="projects" href=" {{ url_for('projects') }} ">Projects</a>
+      </li>
+      <li class="right">
+        <a class="contact" href=" {{ url_for('contact') }} ">Contact</a>        
+      </li>
+      <li class="right">
+        <a class="about" href=" {{ url_for('about') }} ">About</a>
+      </li>
+      <li class="mid">
+        &lt;mateuszbuziak&gt;       
+      </li>
+    </ul>
+  </header>
 
-  <body>
-
-
-    <!-- Main Content -->
-    
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <form name="addForm" id="addForm" method="POST" action="{{ url_for('addproject') }}" novalidate>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls">
-                <label>Title</label>
-                <input type="text" class="form-control" placeholder="Title" name="title" id="title" required data-validation-required-message="Please enter a title.">
-                <p class="help-block text-danger"></p>
+<!-- ARTICLE (!) -->
+  <article>
+    <div>
+        <div>
+          <div>
+            <form name="addForm" id="addForm" method="POST" action="{{ url_for('addproject') }}" novalidate>
+              <div>
+                <div>
+                  <label>Title</label>
+                  <input type="text" class="form-control" placeholder="Title" name="title" id="title" required data-validation-required-message="Please enter a title.">
+                  <p></p>
+                </div>
               </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls">
-                <label>Subtitle</label>
-                <input type="text" class="form-control" placeholder="Subtitle" name="subtitle" id="subtitle" required data-validation-required-message="Please enter your email address.">
-                <p class="help-block text-danger"></p>
+              <div>
+                <div>
+                  <label>Subtitle</label>
+                  <input type="text" class="form-control" placeholder="Subtitle" name="subtitle" id="subtitle" required data-validation-required-message="Please enter your email address.">
+                  <p></p>
+                </div>
               </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls">
-                <label>Blog Content</label>
-                <textarea rows="5" class="form-control" placeholder="Blog content" name="content" id="content" required data-validation-required-message="Please enter a message."></textarea>
-                <p class="help-block text-danger"></p>
+              <div>
+                <div>
+                  <label>Blog Content</label>
+                  <textarea rows="5" class="form-control" placeholder="Blog content" name="content" id="content" required data-validation-required-message="Please enter a message."></textarea>
+                  <p></p>
+                </div>
               </div>
-            </div>
-            <br>
-            <div id="success"></div>
-            <div class="form-group">
-              <button type="submit" class="btn btn-secondary" id="sendMessageButton">Send</button>
-            </div>
-          </form>
+              <br>
+              <div></div>
+              <div>
+                <button type="submit" class="btn btn-secondary" id="sendMessageButton">Send</button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
-    </div>
+  </article>
 
+<!-- FOOTER -->
+  <footer>
+    <ul>
+      <li class="end-logo">
+        &lt;/mateuszbuziak&gt;
+      </li>
+      <li>
+        Copyright &copy; Mateusz Buziak 2022
+      </li>
+    </ul>
+  </footer>
 
-  </body>
-
-</html>
+</body>
+</html> 
