--- a/templates/content.html
+++ b/templates/content.html
@@ -1,67 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
-    
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Mateusz Buziak</title>
-        
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='style/main.css') }}">
-    
+
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Mateusz Buziak</title>
+
+  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='style/main.css') }}">
+
 </head>
 
-<body class="projects background">
-    
-  <!-- Content -->
-    <nav class="topnav">
+<body>
 
-        <a class="home" class="home"  href=" {{ url_for('index') }} ">Home</a>
+<!-- HEADER -->
+  <header class="projects">
+    <ul>
+      <li class="left">
+        <a class="home" href=" {{ url_for('index') }} ">Home</a>
+      </li>
+      <li class="left">
         <a class="projects" href=" {{ url_for('projects') }} ">Projects</a>
+      </li>
+      <li class="right">
+        <a class="contact" href=" {{ url_for('contact') }} ">Contact</a>        
+      </li>
+      <li class="right">
+        <a class="about" href=" {{ url_for('about') }} ">About</a>
+      </li>
+      <li class="mid">
+        &lt;mateuszbuziak&gt;       
+      </li>
+    </ul>
+  </header>
 
-    <nav class="topnav-middle">
-    &lt;mateuszbuziak&gt;
-
-
-    <nav class="topnav-right">
-        <a class="about" href=" {{ url_for('about') }} ">About me</a>
-        <a class="contact clicked" href=" {{ url_for('contact') }} ">Contact</a>
-
-    </nav>
-    </nav>
-    </nav>
-  
-    
-    <!-- Content -->
-    <article>
-
-        <div class="content">
+<!-- ARTICLE (!) -->
+  <article class="projects">
+    <div>
         {{ post.content|safe }}
-        </div>
+    </div>
+  </article>
 
-    </article>
-
-
-    <!-- Footer -->
-    <div style="margin-bottom:100px"></div>
-    
-
-    <footer>
-      <div>
-        <div class="topnav">
-          <div class="footer-end">
-            &lt;/mateuszbuziak&gt;
-          </div>
-          <div>
-            Copyright &copy; Mateusz Buziak 2022
-          </div>
-        </div>
-      </div>
-    </footer>
-
-
+<!-- FOOTER -->
+  <footer>
+    <ul>
+      <li class="end-logo">
+        &lt;/mateuszbuziak&gt;
+      </li>
+      <li>
+        Copyright &copy; Mateusz Buziak 2022
+      </li>
+    </ul>
+  </footer>
 
 </body>
-</html>
+</html> 
