--- a/templates/content.html
+++ b/templates/content.html
@@ -10,7 +10,7 @@
   <title>Mateusz Buziak</title>
 
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='style/main.css') }}">
-
+  
 </head>
 
 <body>
@@ -37,11 +37,11 @@
   </header>
 
 <!-- ARTICLE (!) -->
-  <article class="projects">
-    <div>
-        {{ post.content|safe }}
-    </div>
+  <article>
+    
   </article>
+  
+
 
 <!-- FOOTER -->
   <footer>
