--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,6 +10,7 @@
   <title>Mateusz Buziak</title>
 
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='style/main.css') }}">
+  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='style/contact.css') }}">
 
 </head>
 
@@ -38,7 +39,34 @@
 
 <!-- ARTICLE (!) -->
   <article class="contact">
-    Content
+    <h1>
+      <span>F</span>
+      <span>E</span>
+      <span>E</span>
+      <span>L</span>
+      <span> </span>
+      <span>F</span>
+      <span>R</span>
+      <span>E</span>
+      <span>E</span>
+      <span> </span>
+      <span>T</span>
+      <span>O</span>
+      <span> </span>
+      <span>C</span>
+      <span>O</span>
+      <span>N</span>
+      <span>T</span>
+      <span>A</span>
+      <span>C</span>
+      <span>T</span>
+      <span> </span>
+      <span>M</span>
+      <span>E</span>
+      <span> </span>
+      <span>:</span>
+      <span>)</span>
+    </h1>
   </article>
 
 <!-- FOOTER -->
