--- a/templates/about.html
+++ b/templates/about.html
@@ -10,6 +10,7 @@
   <title>Mateusz Buziak</title>
 
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='style/main.css') }}">
+  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='style/about.css') }}">
 
 </head>
 
@@ -38,7 +39,15 @@
 
 <!-- ARTICLE (!) -->
   <article class="about">
-    Content
+    <div class="container">
+      <h2 class="title">
+        <span class="title-word title-word-1">Hi</span>
+        <span class="title-word title-word-2">my</span>
+        <span class="title-word title-word-3">name</span>
+        <span class="title-word title-word-1">is</span>
+        <span class="title-word title-word-2">Mateusz</span>
+      </h2>
+    </div>
   </article>
 
 <!-- FOOTER -->
