--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
   <title>Mateusz Buziak</title>
 
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='style/main.css') }}">
+  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='style/home.css') }}">
 
 </head>
 
@@ -38,7 +39,26 @@
 
 <!-- ARTICLE (!) -->
   <article class="home">
-    paulo coelio
+    <h1>
+      <span>There</span>
+      <span>are</span>
+      <span>no</span>
+      <span>limits</span>
+      <span>to</span>
+      <span>what</span>
+      <span>you</span>
+      <span>can</span>
+      <span>accomplish,</span>
+      <span>except</span>
+      <span>the</span>
+      <span>limits</span>
+      <span>you</span>
+      <span>place</span>
+      <span>on</span>
+      <span>your</span>
+      <span>own</span>
+      <span>thinking.</span>
+    </h1>
   </article>
 
 <!-- FOOTER -->
