--- a/static/style/about.css
+++ b/static/style/about.css
@@ -42,7 +42,7 @@
 }
 
 .title {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-weight: 800;
   font-size: 8.5vw;
   text-transform: uppercase;
