--- a/templates/contact.html
+++ b/templates/contact.html
@@ -39,34 +39,14 @@
 
 <!-- ARTICLE (!) -->
   <article class="contact">
-    <h1>
-      <span>F</span>
-      <span>E</span>
-      <span>E</span>
-      <span>L</span>
-      <span> </span>
-      <span>F</span>
-      <span>R</span>
-      <span>E</span>
-      <span>E</span>
-      <span> </span>
-      <span>T</span>
-      <span>O</span>
-      <span> </span>
-      <span>C</span>
-      <span>O</span>
-      <span>N</span>
-      <span>T</span>
-      <span>A</span>
-      <span>C</span>
-      <span>T</span>
-      <span> </span>
-      <span>M</span>
-      <span>E</span>
-      <span> </span>
-      <span>:</span>
-      <span>)</span>
-    </h1>
+    <div class="container">
+      <h2 class="title">
+        <span class="title-word title-word-1">This</span>
+        <span class="title-word title-word-2">is</span>
+        <span class="title-word title-word-3">my</span>
+        <span class="title-word title-word-4">text</span>
+      </h2>
+    </div>
   </article>
 
 <!-- FOOTER -->
