--- a/templates/contact.html
+++ b/templates/contact.html
@@ -39,14 +39,15 @@
 
 <!-- ARTICLE (!) -->
   <article class="contact">
-    <div class="container">
-      <h2 class="title">
-        <span class="title-word title-word-1">This</span>
-        <span class="title-word title-word-2">is</span>
-        <span class="title-word title-word-3">my</span>
-        <span class="title-word title-word-4">text</span>
-      </h2>
-    </div>
+    <h2>
+      Contact
+    </h2>
+    <form>      
+      <input name="name" type="text" class="feedback-input" placeholder="Name" />   
+      <input name="email" type="text" class="feedback-input" placeholder="Email" />
+      <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
+      <input type="submit" value="SUBMIT"/>
+    </form>
   </article>
 
 <!-- FOOTER -->
