--- a/static/style/contact.css
+++ b/static/style/contact.css
@@ -1,49 +1,57 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;500&display=swap');
 
-.title-word {
-  animation: color-animation 4s linear infinite;
+form { 
+  
+  margin-bottom: 30vh;
+  height: 100vh;
+  max-width:420px; 
+  margin:50px auto; 
 }
 
-.title-word-1 {
-  --color-1: #F78888;
-  --color-2: #F3D250;
-  --color-3: #5DA2D5;
+.feedback-input {
+  color:white;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight:500;
+  font-size: 18px;
+  border-radius: 5px;
+  line-height: 22px;
+  background-color: transparent;
+  border:2px solid #8D5A97;
+  transition: all 0.3s;
+  padding: 13px;
+  margin-bottom: 15px;
+  width:100%;
+  box-sizing: border-box;
+  outline:0;
 }
 
-.title-word-2 {
-  --color-1: #F3D250;
-  --color-2: #F78888;
-  --color-3: #5DA2D5;
+.feedback-input:focus { border:2px solid #CC4949; }
+
+textarea {
+  height: 150px;
+  line-height: 150%;
+  resize:vertical;
 }
 
-.title-word-3 {
-  --color-1: #F3D250;
-  --color-2: #5DA2D5;
-  --color-3: #F78888;
+[type="submit"] {
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  width: 100%;
+  background:#60993E;
+  border-radius:5px;
+  border:0;
+  cursor:pointer;
+  color:white;
+  font-size:24px;
+  padding-top:10px;
+  padding-bottom:10px;
+  transition: all 0.3s;
+  margin-top:-4px;
+  font-weight:700;
 }
-
-@keyframes color-animation {
-  0%    {color: var(--color-1)}
-  32%   {color: var(--color-1)}
-  33%   {color: var(--color-2)}
-  65%   {color: var(--color-2)}
-  66%   {color: var(--color-3)}
-  99%   {color: var(--color-3)}
-  100%  {color: var(--color-1)}
-}
-
-/* Here are just some visual styles. 🖌 */
+[type="submit"]:hover { background:#CC4949; }
 
 .container {
-  display: grid;
-  place-items: center;  
-  text-align: center;
-  height: 100vh
-}
 
-.title {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 800;
-  font-size: 8.5vw;
-  text-transform: uppercase;
+  font-size: large;
+  text-align: center;
 }
