--- a/templates/contact.html
+++ b/templates/contact.html
@@ -39,15 +39,17 @@
 
 <!-- ARTICLE (!) -->
   <article class="contact">
-    <h2>
-      Contact
-    </h2>
-    <form>      
-      <input name="name" type="text" class="feedback-input" placeholder="Name" />   
-      <input name="email" type="text" class="feedback-input" placeholder="Email" />
-      <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
-      <input type="submit" value="SUBMIT"/>
-    </form>
+    <div class="margin-top">
+      <div class="contact-text">
+        Contact
+      </div>
+      <form>      
+        <input name="name" type="text" class="feedback-input" placeholder="Name" />   
+        <input name="email" type="text" class="feedback-input" placeholder="Email" />
+        <textarea name="text" class="feedback-input" placeholder="Text"></textarea>
+        <input type="submit" value="SUBMIT"/>
+      </form>
+    </div>
   </article>
 
 <!-- FOOTER -->
