--- a/static/style/contact.css
+++ b/static/style/contact.css
@@ -1,22 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;500&display=swap');
 
 form { 
-  
-  margin-bottom: 30vh;
+
   height: 100vh;
   max-width:420px; 
   margin:50px auto; 
 }
 
 .feedback-input {
-  color:white;
-  font-family: Helvetica, Arial, sans-serif;
+  color:black;
+  font-family: 'Oswald', sans-serif;
   font-weight:500;
   font-size: 18px;
   border-radius: 5px;
   line-height: 22px;
-  background-color: transparent;
-  border:2px solid #8D5A97;
+  background-color: #ECECEC;
+  border:2px solid #ECECEC;
   transition: all 0.3s;
   padding: 13px;
   margin-bottom: 15px;
@@ -25,33 +24,45 @@ form {
   outline:0;
 }
 
-.feedback-input:focus { border:2px solid #CC4949; }
+.feedback-input:focus { border:2px solid #F3D250; }
 
 textarea {
   height: 150px;
   line-height: 150%;
   resize:vertical;
+  
 }
 
 [type="submit"] {
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Oswald', sans-serif;
   width: 100%;
-  background:#60993E;
+  background:#ECECEC;
   border-radius:5px;
   border:0;
   cursor:pointer;
-  color:white;
+  color:black;
   font-size:24px;
   padding-top:10px;
   padding-bottom:10px;
   transition: all 0.3s;
   margin-top:-4px;
-  font-weight:700;
+  font-weight:600;
 }
-[type="submit"]:hover { background:#CC4949; }
+
+[type="submit"]:hover { background:#F78888; }
 
 .container {
 
   font-size: large;
   text-align: center;
+}
+
+.margin-top {
+
+  margin-top:20vh;
+}
+
+.contact-text {
+
+  font-size: 40px;
 }
