--- a/static/style/projects.css
+++ b/static/style/projects.css
@@ -6,10 +6,9 @@ article {
     font-family: 'Oswald', sans-serif;
 
 }
+.margin-top {
 
-.margin {
-
-    margin-left: 10vh;
+    margin-top: 1.2vh;
 }
 
 .hiperlinks {
@@ -22,16 +21,108 @@ article {
 
 .title {
 
-    font-size: 30px;
+    font-size: 40px;
+    padding-bottom: 2px;
+    
+    
 }
+
 
 .stack {
 
-    font-size: 25;
+    font-size: 35;
+    text-align: center;
 }
 
 .date {
 
-    font-size: 20;
+    font-size: 30;
     margin-bottom: 10px;
+    text-align: right;
 }
+
+section:nth-child(4n + 1) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    height: 20vh;
+    background: #F3D250;
+}
+
+section:nth-child(4n + 1)::before {
+    position: absolute;
+    top: -15px;
+    width: 100%;
+    height: 15px;
+    background-image: linear-gradient(45deg, #F3D250 50%, transparent 50%),
+                linear-gradient(-45deg, #F3D250 50%, transparent 50%);
+    background-size: 30px 30px;
+    content: '';
+}
+  
+section:nth-child(4n + 2) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    height: 20vh;
+    background: #90CCF4;
+}
+
+section:nth-child(4n + 2)::before {
+    position: absolute;
+    top: -15px;
+    width: 100%;
+    height: 15px;
+    background-image: linear-gradient(45deg, #90CCF4 50%, transparent 50%),
+                linear-gradient(-45deg, #90CCF4 50%, transparent 50%);
+    background-size: 30px 30px;
+    content: '';
+}
+  
+section:nth-child(4n + 3) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    height: 20vh;
+    background: #F78888;
+}
+
+section:nth-child(4n + 3)::before {
+    position: absolute;
+    top: -15px;
+    width: 100%;
+    height: 15px;
+    background-image: linear-gradient(45deg, #F78888 50%, transparent 50%),
+                linear-gradient(-45deg, #F78888 50%, transparent 50%);
+    background-size: 30px 30px;
+    content: '';
+}
+  
+section:nth-child(4n + 4) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    height: 20vh;
+    background: #5DA2D5;
+}
+
+section:nth-child(4n + 4)::before {
+    position: absolute;
+    top: -15px;
+    width: 100%;
+    height: 15px;
+    background-image: linear-gradient(45deg, #5DA2D5 50%, transparent 50%),
+                linear-gradient(-45deg, #5DA2D5 50%, transparent 50%);
+    background-size: 30px 30px;
+    content: '';
+}
+  
+  
