--- a/static/style/projects.css
+++ b/static/style/projects.css
@@ -8,8 +8,9 @@ article {
 }
 .margin-top {
 
-    margin-top: 1.2vh;
+    margin-top: 2vh;
 }
+
 
 .hiperlinks {
 
@@ -37,7 +38,7 @@ article {
 .date {
 
     font-size: 30;
-    margin-bottom: 10px;
+    margin-bottom: 2vh;;
     text-align: right;
 }
 
@@ -47,7 +48,7 @@ section:nth-child(4n + 1) {
     align-items: center;
     position: relative;
     width: 100%;
-    height: 20vh;
+    height: 25vh;
     background: #F3D250;
 }
 
@@ -68,7 +69,7 @@ section:nth-child(4n + 2) {
     align-items: center;
     position: relative;
     width: 100%;
-    height: 20vh;
+    height: 25vh;
     background: #90CCF4;
 }
 
@@ -89,7 +90,7 @@ section:nth-child(4n + 3) {
     align-items: center;
     position: relative;
     width: 100%;
-    height: 20vh;
+    height: 25vh;
     background: #F78888;
 }
 
@@ -110,7 +111,7 @@ section:nth-child(4n + 4) {
     align-items: center;
     position: relative;
     width: 100%;
-    height: 20vh;
+    height: 25vh;
     background: #5DA2D5;
 }
 
