--- a/templates/about.html
+++ b/templates/about.html
@@ -39,7 +39,22 @@
 
 <!-- ARTICLE (!) -->
   <article class="about">
-    
+    <div class="center">
+      <div class="text">
+        <div class="question">
+          Who am I?
+        </div>
+        <div></div>
+        <div>
+          I am a curious person who is able to learn quickly and learn new technologies. I have the ability to make new
+          contacts and work in a team. Discipline and passion for finding new solutions, as well as a love of order
+          make me well versed in many areas of computer science. I am proficient in Python (Certified ), SQL (Certified),
+          Tableau, Excel, R programming language. I regularly work on various Python projects, the results of which
+          can be seen on GitHub (link below). My goal is to work as a Data Engineer and collaborate with ambitious,
+          experienced analysts.
+        </div>
+      </div>
+    </div>
   </article>
 
 <!-- FOOTER -->
