--- a/templates/about.html
+++ b/templates/about.html
@@ -44,14 +44,14 @@
         <div class="question">
           Who am I?
         </div>
-        <div></div>
         <div>
-          I am a curious person who is able to learn quickly and learn new technologies. I have the ability to make new
-          contacts and work in a team. Discipline and passion for finding new solutions, as well as a love of order
-          make me well versed in many areas of computer science. I am proficient in Python (Certified ), SQL (Certified),
-          Tableau, Excel, R programming language. I regularly work on various Python projects, the results of which
-          can be seen on GitHub (link below). My goal is to work as a Data Engineer and collaborate with ambitious,
-          experienced analysts.
+          I am a curious person who is able to learn quickly and learn new technologies. 
+          Professionally, I work analyzing data for quality as a Data Operation Specialist. Discipline and passion for finding new solutions, 
+          as well as a love of order make me well versed in many areas of computer science. I am proficient in Python, 
+          SQL, Tableau, Excel, and the R programming language. I regularly work on various projects in Python, the results 
+          of which can be seen on <a class="hyperlink" href="#xd">GitHub</a>  and on this site under the <i><a  class="hyperlink" href=" {{ url_for('projects') }} ">projects</a></i> 
+          tab. My goal is to work as a Data Engineer and 
+          collaborate with ambitious, experienced analysts.
         </div>
       </div>
     </div>
@@ -60,7 +60,7 @@
 <!-- FOOTER -->
   <footer>
     <ul>
-      <li class="end-logo">
+      <li class="end-logo" id="xd">
         &lt;/mateuszbuziak&gt;
       </li>
       <li>
