--- a/static/style/contact.css
+++ b/static/style/contact.css
@@ -49,7 +49,7 @@ textarea {
   font-weight:600;
 }
 
-[type="submit"]:hover { background:#F78888; }
+[type="submit"]:hover { background:#F39237; }
 
 .container {
 
@@ -65,4 +65,26 @@ textarea {
 .contact-text {
 
   font-size: 40px;
+}
+
+/* -- Alert after sending the message -- */
+.alert {
+  padding: 20px;
+  background-color: #51CB20;
+  color: #ECECEC;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
 }
