--- a/static/style/about.css
+++ b/static/style/about.css
@@ -19,25 +19,22 @@ div {
 .center {
 
     
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 75px;
+    margin-right: 75px;
 }
 
 .text {
     
-    text-align: left;
-    font-size: 35px;
+    text-align: center;
+    font-size: 32px;
 }
 
-.enter {
+.margin {
 
-    margin-top: 5px;
+    margin-bottom: 60px;
+    margin-top:30px;
 }
 
-.question {
-
-    font-weight: 800;
-}
 
 .hyperlink {
 
