--- a/templates/contact.html
+++ b/templates/contact.html
@@ -49,7 +49,7 @@
     
     <div class="margin-top">
       <div class="contact-text">
-        Contact
+        Get in touch!
       </div>
       <form action="{{ url_for('contact_sent') }}" method="POST">      
         <input name="name" type="text" class="feedback-input" placeholder="Name" required/>   
