--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,8 @@
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='style/main.css') }}">
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='style/home.css') }}">
 
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+  
 </head>
 
 <body>
