--- a/templates/contact.html
+++ b/templates/contact.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-
+ 
 <!-- HEADER -->  
   <header class="contact">
     <ul>
@@ -46,9 +46,16 @@
   <article class="contact">
 
     {% if success %}
-    <div class="alert">
+    <div class="alertCorrect">
       <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
       Success! Your message has been sent.
+    </div>
+    {% endif %}
+
+    {% if not success %}
+    <div class="alertWrong">
+      <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+      Wrong! Your email is incorrect.
     </div>
     {% endif %}
     
