--- a/templates/contact.html
+++ b/templates/contact.html
@@ -52,7 +52,7 @@
     </div>
     {% endif %}
 
-    {% if not success %}
+    {% if fail %}
     <div class="alertWrong">
       <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
       Wrong! Your email is incorrect.
