--- a/static/style/about.css
+++ b/static/style/about.css
@@ -16,6 +16,8 @@ div {
 
     cursor: default;
 }
+
+
 .center {
 
     
@@ -25,8 +27,8 @@ div {
 
 .text {
     
-    text-align: center;
-    font-size: 32px;
+    text-align: justify;
+    font-size: 27px;
 }
 
 .margin {
@@ -38,7 +40,7 @@ div {
 
 .hyperlink {
 
-    color: #F3D250;
+    color: black;
     text-decoration: none;
     list-style-type: none;
     
@@ -47,6 +49,32 @@ div {
 .hyperlink:hover {
 
     text-decoration: none;
-    color: #ECECEC;
+    color: #F3D250;
     cursor: pointer;
+}
+
+.textbox {
+
+    background-color: #ECECEC;
+    border-radius: 5px;
+    max-width: 1000px;
+    padding: 50px;
+    border: 50px;
+}
+
+.g {
+    text-align: center;
+}
+
+.mg {
+    margin: 7.5px; 
+    display: inline-block;
+    
+}
+
+.mg img {
+
+    border-radius: 7.5px;
+    width: 60x;
+    height: 60px;
 }
