--- a/templates/about.html
+++ b/templates/about.html
@@ -52,6 +52,7 @@
             {{ post.content|safe }}
           </div>
         {% endfor %}
+        <div>
         <div class="g">
           <div class="mg">
             <a href="https://github.com/8uziak" target="_blank">
